tests/dataset/tpc-ds/compiler/erlang/q2.error
run: exit status 127
escript: exception error: bad key: day
  in function  map_get/2
     called as map_get(day,
                       #{w =>
                             #{sold_date_sk => 2,sales_price => 5,
                               day => "Monday"},
                         d =>
                             #{d_date_sk => 2,d_week_seq => 1,
                               d_day_name => "Monday",d_year => 1998}})
     *** argument 1: not present in map
  in call from q2_erl__escript__1752__561054__138740__8963:'-main/1-lc$^6/1-3-'/1 (/tmp/q2.erl, line 10)
  in call from q2_erl__escript__1752__561054__138740__8963:'-main/1-lc$^5/1-2-'/1 (/tmp/q2.erl, line 10)
  in call from q2_erl__escript__1752__561054__138740__8963:main/1 (/tmp/q2.erl, line 10)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
